--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set (CMAKE_INCLUDE_CURRENT_DIR ON)
 set (CMAKE_AUTOMOC ON)
 
 find_package (Qt5Widgets)
+find_package (Qt5Sql)
 
 # automoc lulz, need to add headers here :-/
 add_executable (imview
@@ -18,7 +19,7 @@ add_executable (imview
   src/main.cpp
 )
 
-target_link_libraries (imview Qt5::Widgets)
+target_link_libraries (imview Qt5::Widgets Qt5::Sql)
 target_compile_features (imview PUBLIC cxx_std_17)
 include_directories ("${CMAKE_SOURCE_DIR}/include")
 
